--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -16,10 +16,9 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
-input {
+input, p, h1 {
   color: var(--background);
 }
